[package]
name = "raum-en-sysinfo"
version = "0.2.0"
authors = ["Raum Dellamorte <elementalsin@gmail.com>"]

[dependencies]
env_logger = "0.7.1"
log = "0.4"
image = "0.23.4"
nom = "5.1.1"
time = "0.2.15"
gl = "0.14.0"
glutin = "0.24.0"
subprocess = "0.2.4"
cupid = "*"
sysinfo = "0.14.1"
systemstat = "0.1.5"
